navigation, categories and configurations done

--- a/404.md
+++ b/404.md
@@ -1,10 +1,8 @@
----
-title: Not Found
-layout: default
+--- 
+layout: page 
 ---
 
-  <h1>404</h1>
-
-  <p><strong>Page not found :(</strong></p>
-  
-  <p>The requested page could not be found.</p>
+<p>
+    <strong>Page not found :(</strong>
+</p>
+<p>The requested page could not be found.</p>
