--- a/_posts/2020-06-01-ELK_Stack.md
+++ b/_posts/2020-06-01-ELK_Stack.md
@@ -5,9 +5,9 @@ summary: Acompanhe logs com facilidade
 author: Karlipe Gomes
 date: '2020-06-01 1:35:23 +0530'
 category: 
-- teampass
+- elk
 - tooltip
-thumbnail: /assets/img/posts/elk-p1/elk-p1.png
+thumbnail: /assets/img/posts/elk-p1/elk-p1-logo.png
 ---
 **Descrição:**
 ELK é um pack de ferramentas utilizadas largamente em vários cenários, que podem variar desde um simples syslog, passando por [SIEM](https://en.wikipedia.org/wiki/Security_information_and_event_management) (Correlacionador de Logs e Eventos)  e podendo chegar correlação de bancos de dados, [BigData](https://www.elastic.co/videos/make-sense-of-your-big-data) e servindo com seus Dashboards para as áreas de negócio e Marketing. 
