--- a/_posts/2020-06-02-ELK-p2-sflow.md
+++ b/_posts/2020-06-02-ELK-p2-sflow.md
@@ -5,7 +5,8 @@ summary: Acompanhe logs com facilidade
 author: Karlipe Gomes
 date: '2020-06-02 1:35:23 +0530'
 category: 
-- teampass
+- sflow
+- elk
 - tooltip
 thumbnail: /assets/img/posts/elk-p2-sflow/elk-p2.png
 ---
