Modificaiton Template post

--- a/_posts/2020-05-30-Template.md
+++ b/_posts/2020-05-30-Template.md
@@ -8,6 +8,7 @@ category:
 - centos7
 - dica
 thumbnail: /assets/img/posts/template-centos7/Thumbnail_centos7.png
+           /assets/img/posts/template-centos7/Thumbnail_centos7.png
 ---
 #### Passo1: Minimal Instalation
 Procedimento de  instalação do CentOS 7, foi utilizado a [ISO Minimal](http://mirror.facom.ufms.br/centos/7/isos/x86_64/CentOS-7-x86_64-Minimal-2003.iso): 
