Adding category files

--- a/_posts/2020-07-03-AWX-p1.md
+++ b/_posts/2020-07-03-AWX-p1.md
@@ -6,7 +6,7 @@ author: Karlipe Gomes
 date: '2020-07-03 1:35:23 +0530'
 category: 
 - awx
-- ansible tower
+- ansible
 - tooltip
 thumbnail: /assets/img/posts/awx-p1/thumbnail_awx.png
 ---
