--- a/_posts/2021-03-07-How-to-SRE.md
+++ b/_posts/2021-03-07-How-to-SRE.md
@@ -1,9 +1,9 @@
 ---
 layout: post
 title:  "#HowToSRE"
-summary: Infra como código
+summary: Explicação sobre o nosso futuro OpenTraining
 author: Karlipe Gomes
-date: '2021-03-08 1:35:23 +0530'
+date: '2021-03-07 1:35:23 +0530'
 category: 
 - SRE
 - training
@@ -16,7 +16,7 @@ Quero durante todo esse percurso, abordar assuntos que são da minha linha de in
 
 Durante esse OpenTraining que carinhosamente chamei de:
 
-## HowToSRE:
+## #HowToSRE:
 Eu sei que nós que estudamos com TI vemos muitos slides durante todo nosso percurso e se você assim como eu tem aquela pitadinha de TDAH, aulas muito monótonas podem acabar atrapalhando todo o processo. Mas infelizmente foi um mal necessário para que eu pudesse organizar meus pensamentos e fazer um direcionamento mais assertivo. **MAS** ai vem a parte boa, eu não vou apenas liberar os meus slides pra vocês! Quero mostrar os Slides para guiar o conteúdo, mas sempre acompanhado de uma demonstração prática para o ambiente do mundo real.
 
 ### A minha idéia é conseguir passar da seguinte forma:
