try changing color search

--- a/_posts/2021-03-07-How-to-SRE.md
+++ b/_posts/2021-03-07-How-to-SRE.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "#HowToSRE"
+title:  "#HowToSRE - Convite inicial"
 summary: Explicação sobre o nosso futuro OpenTraining
 author: Karlipe Gomes
 date: '2021-03-07 1:35:23 +0530'
