--- a/_posts/2021-10-29-welcome.md
+++ b/_posts/2021-10-29-welcome.md
@@ -6,6 +6,7 @@ author: Jake Ryu
 date: '2021-10-27 02:00:00 +0930'
 category: jekyll
 thumbnail: /assets/img/posts/code.jpg
+comments: true
 ---
 
 # 첫 글입니다.!
