updated lint issues

--- a/404.md
+++ b/404.md
@@ -2,6 +2,7 @@
 layout: page
 permalink: /404.html
 ---
-<h2> Sorry the Page you are looking for doesnot exist ! </h2>
 
-<button class="btn btn-lg btn-default"><a href="/">Back to Home</a></button>
+### Sorry the Page you are looking for doesnot exist ! 
+
+[Back To Home]({{site.url}}{{site.baseurl}})
