Fixed typos in 404.md

--- a/404.md
+++ b/404.md
@@ -3,6 +3,6 @@ layout: page
 permalink: /404.html
 ---
 
-# Sorry the Page you are looking for doesnot exist ! 
+# Sorry, the Page you are looking for does not exist ! 
 
 [Back To Home]({{site.url}}{{site.baseurl}})
